--- a/insta_login.html
+++ b/insta_login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instagram</title>
+    <title>Instagram | Login</title>
     <style>
         body {
             margin-top: 25px;
